--- a/index.html
+++ b/index.html
@@ -203,8 +203,11 @@
             <a href="AI_Sites.html">AI Site</a>
         </div>
         <div class="sidebar-row">
-            <a href="battery.html">Battery</a>  
+            <a href="worldbank.html">Battery</a>  
         </div>
+        <!-- <div class="sidebar-row">
+            <a href="battery.html">Battery</a>  
+        </div> -->
         <div class="sidebar-row">  
             <a href="python.html">Python</a>
         </div>
@@ -332,5 +335,4 @@
         </script>
     </body>
     </html></document_content>
-
     </document>
