--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
             <a href="economy.html">Economic Indicator</a>
         </div>
         <div class="sidebar-row">
+            <a href="worldbank.html">World Bank</a>  
+        </div>
+        <div class="sidebar-row">
             <a href="cd.html">CD Rate</a>
         </div>
         <div class="sidebar-row">
@@ -202,18 +205,16 @@
         <div class="sidebar-row">
             <a href="AI_Sites.html">AI Site</a>
         </div>
-        <div class="sidebar-row">
-            <a href="worldbank.html">Battery</a>  
-        </div>
+
         <!-- <div class="sidebar-row">
             <a href="battery.html">Battery</a>  
         </div> -->
-        <div class="sidebar-row">  
+        <!-- <div class="sidebar-row">  
             <a href="python.html">Python</a>
         </div>
         <div class="sidebar-row">
             <a href="vba.html">Excel VBA</a>
-        </div>
+        </div> -->
         <div class="sidebar-row">
             <a href="golf.html">Golf Analysis</a>
         </div>
