--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <a href="pamyo.html">소설</a>
         </div> -->
         <div class="sidebar-row">
-            <a href="economy.html">Economic Indicator</a>
+            <a href="fed.html"> Federal Reserve</a>
         </div>
         <div class="sidebar-row">
             <a href="worldbank.html">World Bank</a>  
