--- a/worldbank.html
+++ b/worldbank.html
@@ -1954,8 +1954,8 @@
                 
                 loadResults = { wbSuccess: 0, wbFailed: 0, wbCached: 0, errors: [] };
                 
-                // Only 2 countries and 3 core indicators for speed = 6 API calls
-                const mobileCountries = ['US', 'KR'];  
+                // Only USA and 3 core indicators for speed = 3 API calls
+                const mobileCountries = ['US'];  
                 const mobileIndicators = [
                     'NY.GDP.MKTP.CD',      // GDP
                     'NY.GDP.MKTP.KD.ZG',   // GDP Growth
