--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
+<!DOCTYPE html>
 <document index="1">
-    <!-- <source>paste.txt</source> -->
-    <document_content><!DOCTYPE html>
-    <html>
-    <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- <source>paste.txt</source> -->
+<document_content><!DOCTYPE html>
+
+<html lang="en">
+<head><meta charset="utf-8"/>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
-        <!-- End Google Tag Manager -->
-    <meta name="google-site-verification" content="0FQ31nRdW_zrYw3eGVUBRThIigXE3GOrr06OSQ5_5qk" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
-    <script>
+<!-- End Google Tag Manager -->
+<meta content="0FQ31nRdW_zrYw3eGVUBRThIigXE3GOrr06OSQ5_5qk" name="google-site-verification"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
+<script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     
     gtag('config', 'G-HMQ4MLP54Y');
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
-    <style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
-    <script>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
+<script>
     window.onload = function() {
         var images = ['image/index/engineering/image (1).png', 'image/index/engineering/image (2).png', 'image/index/engineering/image (3).png', 'image/index/engineering/image (4).png'];
         var img = document.getElementById('randomImage');
@@ -30,8 +32,8 @@
         img.src = images[randomIndex];
     };
     </script>
-    <style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style>
-    <style>
+<style>.sidebar { background-color: rgba(255, 255, 255, 0.5); }</style>
+<style>
         .notice-box {
           position: fixed;
           top: 20px;
@@ -43,24 +45,25 @@
           display: none;
         }
       </style>
-    </head>
-    <style>
+<meta content="width=device-width, initial-scale=1" name="viewport"/><meta content="FREE economic dashboard — Track GDP, CPI inflation, unemployment, interest rates, trade and investment with interactive charts sourced from World Bank and the U.S. Federal Reserve (FRED)." name="description"/><meta content="index, follow" name="robots"/><meta content="en" name="language"/><link href="https://yourdomain.com/" rel="canonical"/><meta content="Global &amp; US Economic Indicators Dashboard 2025 | World Bank &amp; FRED" property="og:title"/><meta content="Track GDP, CPI, unemployment, trade, interest rates with interactive charts. Free, mobile-friendly." property="og:description"/><meta content="website" property="og:type"/><meta content="en_US" property="og:locale"/><meta content="Economic Indicators Dashboard" property="og:site_name"/><meta content="https://yourdomain.com/" property="og:url"/><meta content="https://yourdomain.com/og-image.jpg" property="og:image"/><meta content="summary_large_image" name="twitter:card"/><meta content="FREE Economic Dashboard | Global &amp; US Indicators (World Bank &amp; FRED)" name="twitter:title"/><meta content="Monitor GDP, CPI, unemployment, interest rates, trade and more. Interactive charts, mobile-friendly." name="twitter:description"/><meta content="https://yourdomain.com/og-image.jpg" name="twitter:image"/><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebApplication","name":"Global & US Economic Indicators Dashboard 2025","description":"Dashboard for global & US economic indicators with interactive charts (World Bank & FRED).","url":"https://yourdomain.com/","applicationCategory":"BusinessApplication","operatingSystem":"Any","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"inLanguage":"en","isAccessibleForFree":true,"creator":{"@type":"Organization","name":"Economic Dashboard"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","name":"Economic Indicators Dashboard","url":"https://yourdomain.com/","potentialAction":{"@type":"SearchAction","target":"https://yourdomain.com/search?q={query}","query-input":"required name=query"}}</script><link href="//api.worldbank.org" rel="dns-prefetch"/><link href="//api.stlouisfed.org" rel="dns-prefetch"/><link href="https://www.googletagmanager.com" rel="preconnect"/><link href="https://fonts.gstatic.com" rel="preconnect"/></head>
+<style>
         html, body {
             margin: 0; /* 여백 제거 */
             padding: 0; /* 여백 제거 */
-            overflow: hidden; /* 스크롤 제거 */
+            overflow: auto; /* 스크롤 제거 */
             width: 100%; /* 가로 크기 고정 */
             height: 100%; /* 세로 크기 고정 */
         }
     </style>
-    <body>
-    <!-- <img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw; z-index: -1;"/> -->
-    <img id="randomImage" src="" style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: -1;"/>
-    <!DOCTYPE html>
-    <html lang="ko">
-    <meta charset="utf-8"/>
-    <title>Economy Indicator</title>
-    <style>
+<body><h1>Global &amp; US Economic Indicators Dashboard (World Bank &amp; FRED)</h1><p>Explore live economic indicators including GDP, CPI, unemployment, interest rates, trade and investment. Data sources: World Bank &amp; Federal Reserve (FRED).</p>
+<!-- <img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw; z-index: -1;"/> -->
+<img alt="Background image for Economic Indicators Dashboard" id="randomImage" src="" style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: -1;"/>
+<!DOCTYPE html>
+
+
+<meta charset="utf-8"/>
+<title>Global &amp; US Economic Indicators Dashboard 2025 | World Bank &amp; FRED | GDP, CPI, Trade, Interest Rates</title>
+<style>
        body {
                 font-family: Arial, sans-serif;
                 margin: 0;
@@ -136,7 +139,7 @@
             }
         }
     </style>
-    <style>
+<style>
     .circle {
         position: absolute;
         border: 3px solid;
@@ -162,7 +165,7 @@
     }
     }
     </style>
-    <style>
+<style>
     .footer {
         position: fixed;
         left: 0;
@@ -174,53 +177,53 @@
         padding: 10px 0;
     }
     </style>
-    <div class="sidebar" style="left: 0; transition: left 2s;">
-        <div class="sidebar-row">
+<div class="sidebar" style="left: 0; transition: left 2s;">
+<!-- <div class="sidebar-row">
             <a href="english.html">English</a>
-        </div>
-        <div class="sidebar-row">
+        </div> -->
+<!-- <div class="sidebar-row">
             <a href="brunch.html">Brunch</a>
-        </div>
-        <!-- <div class="sidebar-row">
+        </div> -->
+<!-- <div class="sidebar-row">
             <a href="pamyo.html">소설</a>
         </div> -->
-        <div class="sidebar-row">
-            <a href="fed.html"> Federal Reserve</a>
-        </div>
-        <div class="sidebar-row">
-            <a href="worldbank.html">World Bank</a>  
-        </div>
-        <div class="sidebar-row">
-            <a href="cd.html">CD Rate</a>
-        </div>
-        <div class="sidebar-row">
-            <a href="mortgage.html">Mortgage</a>
-        </div>
-        <!-- <div class="sidebar-row">
+<div class="sidebar-row">
+<a href="fed.html"> Federal Reserve</a>
+</div>
+<!-- <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> -->
+<div class="sidebar-row">
+<a href="worldbank/worldbank.html">World Bank</a>
+</div>
+<div class="sidebar-row">
+<a href="cd.html">CD Rate</a>
+</div>
+<div class="sidebar-row">
+<a href="mortgage.html">Mortgage</a>
+</div>
+<!-- <div class="sidebar-row">
             <a href="battery.html">배터리</a>  
         </div> -->
-        <div class="sidebar-row">  
-            <a href="fund.html">Hedge Fund</a>
-        </div>
-        <div class="sidebar-row">
+<div class="sidebar-row">
+<a href="fund.html">Hedge Fund</a>
+</div>
+<!-- <div class="sidebar-row">
             <a href="AI_Sites.html">AI Site</a>
-        </div>
-
-        <!-- <div class="sidebar-row">
+        </div> -->
+<!-- <div class="sidebar-row">
             <a href="battery.html">Battery</a>  
         </div> -->
-        <!-- <div class="sidebar-row">  
+<!-- <div class="sidebar-row">  
             <a href="python.html">Python</a>
         </div>
         <div class="sidebar-row">
             <a href="vba.html">Excel VBA</a>
         </div> -->
-        <div class="sidebar-row">
+<!-- <div class="sidebar-row">
             <a href="golf.html">Golf Analysis</a>
-        </div>
-    </div>
-    <div class="content">
-    <script>
+        </div> -->
+</div>
+<div class="content">
+<script>
        var clickCount = 0;
     document.addEventListener('click', function(e){
     var numCircles = 1;
@@ -260,14 +263,14 @@
     }
     });
     </script>
-    <footer class="footer"><p>Copyright © 2023~2024 </p></footer>
-    <script>
+<footer class="footer"><p>Copyright © 2023~2024 </p></footer>
+<script>
     document.addEventListener('click', function(e){
         var img = document.querySelector('img');
         img.style.display = 'block';
     });
     </script>
-    <script>
+<script>
     document.addEventListener('click', function(e){
         var img1 = document.querySelector('img');
         var img2 = document.querySelectorAll('img')[1];
@@ -281,9 +284,9 @@
         }
     });
     </script>
-    </div>
-    </html>
-    <style>
+</div>
+
+<style>
         .notice-box {
           position: fixed !important;
           bottom: 20px !important;
@@ -308,11 +311,11 @@
           font-size: 48px;
         }
       </style>
-      <div class="notice-box">
-        <p><strong></strong></p>
-        <p></p>
-      </div>
-      <script>
+<div class="notice-box">
+<p><strong></strong></p>
+<p></p>
+</div>
+<script>
         window.onload = function() {
           var images = [];
           
@@ -334,6 +337,6 @@
           document.querySelector('.notice-box').style.display = 'block';
         };
         </script>
-    </body>
-    </html></document_content>
-    </document>
+</body>
+</html></document_content>
+</document>
